--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "urlshortener-cli"
 version = "0.1.0"
 authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
+description = "A program which makes your url shorten."
+keywords = ["url", "short", "shortener", "link", "web", "http"]
+license = "MIT"
+repository = "https://github.com/vityafx/urlshortener-cli"
 
 [dependencies]
 urlshortener = "0.5.0"
