--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "urlshortener-cli"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
 description = "A program which makes your url shorten."
 keywords = ["url", "short", "shortener", "link", "web"]
 license = "MIT"
 repository = "https://github.com/vityafx/urlshortener-cli"
+documentation = "https://github.com/vityafx/urlshortener-cli"
 
 [dependencies]
 urlshortener = "0.5.0"
